<resources>
    <string name="app_name">FX Eventos Inventario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FX Eventos</string>
    <string name="nav_header_subtitle">Gestor de Inventario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_cerrar_sesion">Cerrar Sesion</string>

    <string name="menu_home">Crear Producto</string>
    <string name="menu_gallery">Ver Productos</string>
    <string name="menu_slideshow">Lector Qr</string>
    <string name="menu_setting">Configuracion</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="firstName">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="login">Iniciar sesión</string>
    <string name="createAct">Crear cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="actualizar_producto_nota">Nota: Actualice los campos necesarios y
    luego pulse el botón “Actualizar”.

    Asegúrese de que los datos se han actualizado
    correctamente.</string>


    <string name="darkmode">Modo Oscuro</string>
    <string name="darkmodeOn">Activado</string>
    <string name="darkmodeOff">Desactivado</string>

</resources>