<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#E5F9FC">

    <ImageView
        android:id="@+id/imageView"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        app:srcCompat="@drawable/logo_fx_eventos"/>

    <EditText
        android:id="@+id/etEmail"
        style="@style/viewCustom"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="30dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/black"/>

    <EditText
        android:id="@+id/etPassword"
        style="@style/viewCustom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:backgroundTint="@color/black"
        />
    <Button
        android:id="@+id/btnLogin"
        style="@style/viewCustom"
        android:backgroundTint="@color/orange_west_side"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:onClick="login"/>


   <Button
           android:id="@+id/create"
           style="@style/viewCustom"
           android:backgroundTint="@color/orange_west_side"
           android:text="@string/createAct"
           android:textColor="@android:color/white"
           android:textStyle="bold"
           android:onClick="register"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        style="@style/viewCustom"
        android:layout_below="@id/btnLogin"
        android:onClick="forgotPassword"
        android:gravity="center_horizontal"
        android:text="@string/forgotPassword"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/img_med_quim_caj_inventario_1" />
</LinearLayout>
